--- a/style.css
+++ b/style.css
@@ -299,11 +299,17 @@ h2.big-text {
     /*padding: 0rem 3rem;*/
   }
 
+
+
+}
+
+@media only screen and (min-width: 960px) {
   .quick-links {
     margin-left: 4rem;
   }
-
 }
+
+
 
 
 /*------------------------footer styles-------------------------------*/
